-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9
-
None
-
-
e5dfb0c27 (dev), 4fa6cf1fe (6.10), 2c28492c5 (6.9.3)
In order to type Kanji characters in Japanese, we need to always have the word prediction strip enabled (similar to Chinese). Currently Qt VirtualKeyboard doesn't show the word prediction strip in the following cases:
- When in the "swipe typing" hiragana layout
- When in any of the other romaji input layouts, when the text field has text prediction disabled
Attached is an example with a textfield (text prediction disabled) and keyboard. When using the japanese layout, no prediction strip comes up to allow users to type kanji characters in any of the layouts.
| For Gerrit Dashboard: QTBUG-138888 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 677212,5 | openwnn: Fix HiraganaFlick conversion and layout | dev | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |
| 678852,2 | openwnn: Fix HiraganaFlick conversion and layout | 6.10 | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |
| 678863,2 | openwnn: Fix HiraganaFlick conversion and layout | 6.9.3 | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |