openwnn: Fix HiraganaFlick conversion and layout

- Ignore ImhNoPredictiveText for Japanese: conversion still relies on
  prediction.
- Enable L2 conversion in HiraganaFlick.
- Use full-size (large) hiragana in the flick layout.
- Auto-fold yo/yu/ya -> small kana after yoon bases.
- Compose dakuten/handakuten with previous kana (NFC).

Fixes: QTBUG-138888
Change-Id: I766f7c2c33f14a10503e6f49f5551fe528b01a82
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit e5dfb0c278cf90acc51ed8ced21416782b393a90)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 4fa6cf1fe6f1056ff854a0844025fc84013d2056)