tests/auto/inputpanel/data/inputpanel/inputpanel.qml
@@ -446,11 +446,22 @@ InputPanel {
             testcase.mousePress(inputPanel, virtualKeyPressPoint.x, virtualKeyPressPoint.y)
             testcase.wait(1)
             if (alternativeKey) {
-                if (keyObj.keyType !== QtVirtualKeyboard.KeyType.FlickKey)
+                if (keyObj.keyType === QtVirtualKeyboard.KeyType.FlickKey) {
+                    const flickRadius = (keyObj.width / 2 + 1)
+                    if (key === keyObj.flickLeft)
+                        virtualKeyPressPoint.x -= flickRadius
+                    else if (key === keyObj.flickRight)
+                        virtualKeyPressPoint.x += flickRadius
+                    else if (key === keyObj.flickTop)
+                        virtualKeyPressPoint.y -= flickRadius
+                    else if (key === keyObj.flickBottom)
+                        virtualKeyPressPoint.y += flickRadius
+                } else {
                     alternativeKeysSpy.wait()
-                var keyIndex = keyObj.effectiveAlternativeKeys.indexOf(key.toLowerCase())
-                var itemX = keyIndex * keyboard.style.alternateKeysListItemWidth + keyboard.style.alternateKeysListItemWidth / 2
-                virtualKeyPressPoint.x = inputPanel.mapFromItem(alternativeKeys.listView, itemX, 0).x
+                    var keyIndex = keyObj.effectiveAlternativeKeys.indexOf(key.toLowerCase())
+                    var itemX = keyIndex * keyboard.style.alternateKeysListItemWidth + keyboard.style.alternateKeysListItemWidth / 2
+                    virtualKeyPressPoint.x = inputPanel.mapFromItem(alternativeKeys.listView, itemX, 0).x
+                }
                 testcase.mouseMove(inputPanel, virtualKeyPressPoint.x, virtualKeyPressPoint.y)
                 testcase.wait(1)
             }
